<resources>
    <string name="app_name">Cotinga</string>
    <string name="Titulo_Splash"> COTINGA </string>
    <string name="home"> home </string>
    <string name="home1"> Aves </string>
    <string name="home4"> Turismo </string>
    <string name="home5"> Rutas de Avistamiento </string>
    <string name="home6"> Guías </string>
    <string name="home7"> Recomendaciones </string>
    <string name="menu1"> Idioma </string>
    <string name="menu2"> Acerca de </string>
    <string name="menu3"> Enlaces de interés </string>
    <string name="submenu1"> Inglés </string>
    <string name="submenu2"> Español </string>
    <string name="Acercade2"> Aplicación desarrollada por el sistema de investigación, desarrollo tecnológico e innovación Sennova </string>
    <string name="Acercade3"> Todos los derechos reservados  </string>
    <string name="Acercade4">  Medellín-2017 </string>
    <string name="Acercade5">  Cotinga es posible gracias a la colaboración de: </string>
    <string name="info1">  Forma del Ave </string>
    <string name="info2">  Forma del Pico </string>
    <string name="info3">  Color Primario </string>
    <string name="info4">  Color Secundario </string>
    <string name="info5">  Color de Patas </string>
    <string name="info6">  Endemismo </string>
    <string name="info7">  Estado de Conservacion </string>
    <string name="info8">  Rutas de Avistamiento </string>
    <string name="rutainfo1">  Otras Rutas </string>
    <string name="endemismoinfo1">  Ave Migratoria </string>
    <string name="endemismoinfo2">  Ave Residente </string>
    <string name="conservainfo1">  Preocupación Menor </string>
    <string name="conservainfo2">  Vulnerable </string>
    <string name="conservainfo3">  Casi Amenazado </string>
    <string name="conservainfo4">  En Peligro </string>
    <string name="conservainfo5">  No Aplica </string>
    <string name="formainfo1">  Otros </string>
    <string name="formainfo2">  Rapaz </string>
    <string name="formainfo3">  Búho </string>
    <string name="formainfo4">  Colibrí </string>
    <string name="formainfo5">  Loro </string>
    <string name="formainfo6">  Trepatroncos </string>
    <string name="formainfo7">  Golondrina </string>
    <string name="formainfo8">  Paloma </string>
    <string name="formainfo9">  Garza </string>
    <string name="formainfo10"> Pato </string>
    <string name="picoinfo1">  Otros </string>
    <string name="picoinfo2">  Rapaz </string>
    <string name="picoinfo3">  Nectívoro </string>
    <string name="picoinfo4">  Multiusos </string>
    <string name="picoinfo5">  Semillero </string>
    <string name="picoinfo6">  Frugívoro </string>
    <string name="picoinfo7">  Barbudo </string>
    <string name="picoinfo8">  Insectívoro </string>
    <string name="picoinfo9">  Generalista </string>
    <string name="picoinfo10"> Oropéndola </string>
    <string name="colorinfo1">  Otros </string>
    <string name="colorinfo2">  Amarillo </string>
    <string name="colorinfo3">  Azul </string>
    <string name="colorinfo4">  Blanco </string>
    <string name="colorinfo5">  Café </string>
    <string name="colorinfo6">  Dorado </string>
    <string name="colorinfo7">  Gris </string>
    <string name="colorinfo8">  Morado </string>
    <string name="colorinfo9">  Naranja </string>
    <string name="colorinfo10"> Negro </string>
    <string name="colorinfo11"> Pardo </string>
    <string name="colorinfo12"> Rojo </string>
    <string name="colorinfo13"> Rufo </string>
    <string name="colorinfo14"> Verde</string>
    <string name="filtro1"> CRITERIOS DE BÚSQUEDA</string>
    <string name="filtro1_dialogo"> Aquí encontrará un filtro donde podrá identificar y registrar las aves que está viendo durante el recorrido</string>
    <string name="filtro2"> Buscar </string>
    <string name="filtro3"> Volver </string>
    <string name="recomiendame_dialogo"> A continuación encontrará una serie de recomendaciones para que la experiencia de avistamiento de aves en Jardín sea agradable, segura y amigable con el medio ambiente</string>
    <string name="recomiendame"> Pulse sobre cada globo para obtener información:</string>
    <string name="recor1"> - Tenga clara la ruta que quiere realizar </string>
    <string name="recor2"> - Use ropa cómoda y adecuada para la ocasión preferiblemente colores opacos y resistentes al agua </string>
    <string name="recor3"> - Lleve siempre hidratación y alimentos </string>
    <string name="recor4"> - Procure en el momento del avistamiento no hacer movimientos ni ruidos fuertes, converse siempre con un tono de voz bajo </string>
    <string name="recor5"> - Sea paciente, recuerde que las aves viven a su ritmo </string>
    <string name="recor6"> - En lo posible salga acompañado por un guía local, esto le facilitará el reconocimiento de las rutas y las especies de aves </string>
    <string name="recor7"> - Respete al máximo los lugares señalados como privados o restringidos al público </string>
    <string name="recor8"> - No arroje basuras, respete los ecosistemas; no extraiga material natural de los bosques, senderos y/o carreteras </string>
    <string name="recor9"> - Si dispone de binoculares, cámaras y guías de campo llévelos siempre con usted, esto le facilitará el desarrollo de la actividad </string>
    <string name="recor10"> - Planee siempre la hora de regreso, infórmese de los horarios de transporte si va a hacer uso del servicio público </string>
    <string name="recor11"> - Tenga presente que la actividad de las aves por su estado silvestre es cambiante y no siempre se encontrarán en el lugar esperado </string>
    <string name="recor12"> - Atienda siempre a las recomendaciones de su guía local </string>
    <string name="turismoinfo1">Dirección:</string>
    <string name="turismoinfo2">Teléfono:</string>
    <string name="turismoinfo3">E-mail:</string>
    <string name="turismoinfo4">Distancia desde la cabecera:</string>
    <string name="turismoinfo5">Ruta:</string>
    <string name="turismoinfo6">Información:</string>
    <string name="Redes">Visitar:</string>
    <string name="link">Visitar sitio web</string>
    <string name="sitioinfo1">Dirección web</string>
    <string name="sitioinfo2">Tipo de sitio</string>
    <string name="sitioinfo3">Descripción</string>
    <string name="carga1">Cargando guias turísticos</string>
    <string name="carga2">Cargando sitios turísticos</string>
    <string name="carga3">Cargando enlaces de interés</string>
    <string name="guiainfo1">Número de teléfono</string>
    <string name="guiainfo2">Correo electrónico</string>
    <string name="guiainfo3">Datos básicos</string>
    <string name="cardguias">Guías turísticos en el municipio</string>
    <string name="cardaves">Listado de Aves </string>
    <string name="cardturistico">Sitios turísticos en el municipio </string>
    <string name="cardintereses">Páginas WEB de Interés </string>
    <string name="cardrecom">Recomendaciones generales </string>
    <string name="cardrutas">Rutas de Avistamiento </string>
    <string name="asunto_mail_turismo">Contacto Aves de Jardín</string>
    <string name="cuerpo_mail_turismo">Saludos.\n\nMe gustaría comunicarme con usted con el fin de conocer
                más detalles sobre los servicios que ofrece su establecimiento.\n\n
                Gracias por su atención.</string>
    <string name="asunto_mail_guia">Contacto Aves de Jardín</string>
    <string name="cuerpo_mail_guia">Saludos.\n\nMe gustaría comunicarme con usted con el fin de conocer
                más detalles sobre opciones turísticas en el municipio de Jardín.\n\n
                Gracias por su atención.</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="error_mail">Hay un error con la aplicación de mensajería.</string>
    <string name="confirmar_permiso">Es necesario habilitar los permisos para completar la acción.</string>
    <string name="permiso_si">Permisos concedidos.</string>
    <string name="permiso_no">Permisos denegados.</string>
    <string name="no_conexion">Esta información no está disponible sin conexión a internet</string>
    <string name="no_mail">Debe tener una dirección de destino</string>
    <string name="no_tele">Debe tener un número telefónico de destino</string>
    <string name="no_calificar">Sólo puede calificar una vez:</string>
    <string name="titulo_califica_guia">Califica este guía</string>
    <string name="titulo_califica_sitio">Califica este sitio</string>
    <string name="titulo_Califica">Calificar</string>
    <string name="filtroa">Aves encontradas:</string>
    <string name="filtrob">Aves</string>
    <string-array name="FormaAve">
        <item>  Todos </item>
        <item>  Rapaz </item>
        <item>  Buho </item>
        <item>  Colibrí </item>
        <item>  Loro </item>
        <item>  Trepatroncos </item>
        <item>  Golondrina </item>
        <item>  Paloma </item>
        <item>  Garza </item>
        <item>  Pato </item>
    </string-array>
    <string-array name="FormaPico">
        <item>  Todos </item>
        <item>  Rapaz </item>
        <item>  Nectívoro </item>
        <item>  Multiusos </item>
        <item>  Semillero </item>
        <item>  Frugívoro </item>
        <item>  Barbudo </item>
        <item>  Insectívoro </item>
        <item>  Generalista </item>
        <item>  Oropéndola </item>
    </string-array>
    <string-array name="ColorPrincipal">
        <item>  Todos </item>
        <item>  Amarillo </item>
        <item>  Azul </item>
        <item>  Blanco </item>
        <item>  Café </item>
        <item>  Dorado </item>
        <item>  Gris </item>
        <item>  Morado </item>
        <item>  Naranja </item>
        <item>  Negro </item>
        <item>  Pardo </item>
        <item>  Rojo </item>
        <item>  Rufo </item>
        <item>  Verde </item>
    </string-array>
    <string-array name="ColorSecundario">
        <item>  Todos </item>
        <item>  Amarillo </item>
        <item>  Azul </item>
        <item>  Blanco </item>
        <item>  Café </item>
        <item>  Dorado </item>
        <item>  Gris </item>
        <item>  Morado </item>
        <item>  Naranja </item>
        <item>  Negro </item>
        <item>  Pardo </item>
        <item>  Rojo </item>
        <item>  Rufo </item>
        <item>  Verde </item>
    </string-array>
    <string-array name="sitios_array">
        <item>Filtrar por tipo de sitio</item>
        <item>Restaurantes</item>
        <item>Hoteles y hostales</item>
        <item>Gasolineras</item>
        <item>Zona escolar</item>
        <item>Bares</item>
        <item>Sitios históricos</item>
        <item>Sitios ecoturísticos</item>
        <item>Compras</item>
        <item>Sitio de interés religioso</item>
        <item>Zona WiFi</item>
        <item>Deportes</item>
        <item>Centros de salud</item>
        <item>Transporte público</item>
        <item>Resguardo indígena</item>
        <item>Zona bancaria</item>
        <item>Mostrar todos</item>

    </string-array>
    <string name="no_sitio">No hay resultados. Intente con otro criterio</string>
    <string name="ruta1">La Herrera</string>
    <string name="ruta2">La Salada</string>
    <string name="ruta3">Verdun-Mesenia</string>
    <string name="ruta4">Ventanas</string>
    <string name="longitud">Longitud de la ruta: </string>
    <string name="avistamiento1">*** Avistada ***</string>
    <string name="avistamiento3">Avistada</string>
    <string name="avistamiento2">Ha sido avistada</string>
    <string name="d1">Tímido y común en arbustos cernanos al suelo</string>
    <string name="d2">Relacionado a fuentes hídricas debido a su principal alimento (peces)</string>
    <string name="d3">Abundante y fácil de encontrar en potreros</string>
    <string name="d4">Solitaria y común en las orillas de fuentes hídricas</string>
    <string name="d5">Distinguida por su bonito plumaje y tranquilidad</string>
</resources>