<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="8dp"
    android:background="@color/whitesmoket"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recor5"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="8dp">
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recor10"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_gravity="center"/>

    <Button
        android:background="@color/whitesmoket"
        android:id="@+id/volver5"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/filtro3"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="35dp" />

</LinearLayout>